force-app/main/default/objects/Assessment_Matrix__c/fields/Non_social_homes_RAG__c.field-meta.xml
<CustomField>
    <fullName>Non_social_homes_RAG__c</fullName>
    <label>4.3 - Non-social homes included in phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>