force-app/main/default/objects/Assessment_Matrix__c/fields/Overall_RAG_Decision_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_RAG_Decision_Score__c</fullName>
    <label>Overall RAG/Decision Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber/Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>