force-app/main/default/objects/Assessment_Matrix__c/fields/Phase_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Phase_Baseline__c</fullName>
    <label>Phase Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Assessment Matrixes</relationshipLabel>
    <relationshipName>Assessment_Matrixes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>