force-app/main/default/objects/Assessment_Matrix__c/fields/Phase_DCA_justification__c.field-meta.xml
<CustomField>
    <fullName>Phase_DCA_justification__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>