force-app/main/default/objects/Assessment_Matrix__c/fields/Phase_DCA_RAG__c.field-meta.xml
<CustomField>
    <fullName>Phase_DCA_RAG__c</fullName>
    <label>1.3 - GR Phase DCA - RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>