force-app/main/default/objects/Assessment_Matrix__c/fields/Phase_Request__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request__c</fullName>
    <label>Phase Request</label>
    <referenceTo>FundingAwardAmendment</referenceTo>
    <relationshipLabel>Assessment Matrixes</relationshipLabel>
    <relationshipName>Assessment_Matrixes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>