force-app/main/default/objects/Assessment_Matrix__c/fields/PR_matches_previous_baseline_justificati__c.field-meta.xml
<CustomField>
    <fullName>PR_matches_previous_baseline_justificati__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>