force-app/main/default/objects/Assessment_Matrix__c/fields/PR_matches_previous_baseline_RAG__c.field-meta.xml
<CustomField>
    <fullName>PR_matches_previous_baseline_RAG__c</fullName>
    <label>1.2.3 -PR matches-PR baseline in GFA-RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>