force-app/main/default/objects/Assessment_Matrix__c/fields/Received_signed_copy_RAG__c.field-meta.xml
<CustomField>
    <fullName>Received_signed_copy_RAG__c</fullName>
    <label>1.2.9 - Received DESNZ signed GF/FRA/FMP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>