force-app/main/default/objects/Assessment_Matrix__c/fields/Starting_EPCs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Starting_EPCs_RAG__c</fullName>
    <label>4.1 - Starting EPCs - RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>