force-app/main/default/objects/Assessment_Matrix__c/fields/Stock_and_Measures_Total_Green__c.field-meta.xml
<CustomField>
    <fullName>Stock_and_Measures_Total_Green__c</fullName>
    <formula>IF(ISPICKVAL(  Starting_EPCs_RAG__c , &quot;Green&quot;), 1, 0) +
IF(ISPICKVAL(  Ending_EPCs_RAG__c , &quot;Green&quot;), 1, 0) +
IF(ISPICKVAL(  Non_social_homes_RAG__c , &quot;Green&quot;), 1, 0) +
IF(ISPICKVAL(  Measure_types_installed_RAG__c , &quot;Green&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock &amp; Measures - Total Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>