force-app/main/default/objects/Assessment_Matrix__c/fields/Stock_Measures_Total_Normal_Red__c.field-meta.xml
<CustomField>
    <fullName>Stock_Measures_Total_Normal_Red__c</fullName>
    <formula>IF(AND(ISPICKVAL( Starting_EPCs_RAG__c, &quot;Red&quot;), ISPICKVAL(  Starting_EPCs_High_Risk__c  , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Ending_EPCs_RAG__c, &quot;Red&quot;), ISPICKVAL(  Ending_EPCs_High_Risk__c  , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Non_social_homes_RAG__c, &quot;Red&quot;), ISPICKVAL(  Non_social_homes_High_Risk__c  , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Measure_types_installed_RAG__c, &quot;Red&quot;), ISPICKVAL(  Measure_types_installed_High_Risk__c  , &quot;No&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock &amp; Measures - Total Normal Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>