force-app/main/default/objects/Assessment_Matrix__c/fields/Total_A_A_costs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Total_A_A_costs_RAG__c</fullName>
    <label>2.27 - Total A&amp;A costs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>