force-app/main/default/objects/Assessment_Matrix__c/fields/Total_co_funding_RAG__c.field-meta.xml
<CustomField>
    <fullName>Total_co_funding_RAG__c</fullName>
    <label>2.25 - Total co-funding contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>