force-app/main/default/objects/Assessment_Matrix__c/fields/Total_grant_funding_justification__c.field-meta.xml
<CustomField>
    <fullName>Total_grant_funding_justification__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>