force-app/main/default/objects/Assessment_Matrix__c/fields/Total_grant_funding_RAG__c.field-meta.xml
<CustomField>
    <fullName>Total_grant_funding_RAG__c</fullName>
    <label>2.23 - Total grant funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>