force-app/main/default/objects/Assessment_Matrix__c/fields/Total_High_Risk_Red__c.field-meta.xml
<CustomField>
    <fullName>Total_High_Risk_Red__c</fullName>
    <formula>Declarations_Total_High_Risk_Red__c +
 Homes_Costs_Total_High_Risk_Red__c +
 Stock_Measures_Total_High_Risk_Red__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total High Risk Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>