force-app/main/default/objects/Assessment_Matrix__c/fields/Total_phase_costs_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Total_phase_costs_High_Risk__c</fullName>
    <label>XTotal phase costs - High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>