force-app/main/default/objects/Assessment_Matrix__c/fields/Total_phase_costs_justification__c.field-meta.xml
<CustomField>
    <fullName>Total_phase_costs_justification__c</fullName>
    <label>XTotal phase costs justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>