force-app/main/default/objects/Assessment_Matrix__c/fields/Updated_PP_RR_RAG__c.field-meta.xml
<CustomField>
    <fullName>Updated_PP_RR_RAG__c</fullName>
    <label>1.2.11 - Updated Project &amp; Risk Register</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>