force-app/main/default/objects/Assessment_Matrix__c/fields/XTotal_Normal_Red__c.field-meta.xml
<CustomField>
    <fullName>XTotal_Normal_Red__c</fullName>
    <formula>Declarations_Total_Normal_Red__c +
 Grant_Drawdown_Total_Normal_Red__c +
 Homes_Costs_Total_Normal_Red__c +
 Stock_Measures_Total_Normal_Red__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XTotal Normal Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>