force-app/main/default/objects/Assessment_Matrix__c/recordTypes/Assessment_Matrix.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Matrix</fullName>
    <active>true</active>
    <label>Assessment Matrix</label>
</RecordType>